--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,11 +4,23 @@
     "name" : "Main",
     "version": "1.0",
 
+    "browser_action" :
+     {
+        "default_icon": "icons/caja.png",
+        "default_title" : "Saludar",
+        "default_popup" : "popup/saludar.html"
+    },
+
+    "background" : {
+        "scripts" : [
+            "background_scripts/BackgroundExtension.js"
+        ]
+    },
 
     "content_scripts": [
         {
         "matches" :["*://*/*"],
-        "js" : [ "main.js" ] 
+        "js" : [ "content_scripts/main.js" ] 
         }
     ]
 
