--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,27 +1,36 @@
 {
     "manifest_version" : 2,
     "author" : "Santiago",
-    "name" : "Main",
+    "name" : "Buscador",
     "version": "1.0",
 
     "browser_action" :
      {
         "default_icon": "icons/caja.png",
-        "default_title" : "Saludar",
-        "default_popup" : "popup/saludar.html"
+        "default_title" : "Buscar"
     },
 
     "background" : {
-        "scripts" : [
-            "background_scripts/BackgroundExtension.js"
-        ]
+        "scripts": ["background_scripts/background.js"],
+        "persistent" : false
     },
 
     "content_scripts": [
         {
-        "matches" :["*://*/*"],
-        "js" : [ "content_scripts/main.js" ] 
+        "matches": [
+                    "*://*.google.com/*", 
+                    "*://*.bing.com/*",
+                    "*://*.duckduckgo.com/*"
+                    ],
+        "js" : [ "content_scripts/main.js"                
+         ] 
         }
-    ]
+    ], 
+
+    "permissions": [
+	    "*",
+	    "tabs",
+	    "storage"
+	  ]
 
 }
