--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,7 +7,8 @@
     "browser_action" :
      {
         "default_icon": "icons/caja.png",
-        "default_title" : "Buscar"
+        "default_title" : "Buscar",
+        "default_popup": "popup/buscar.html"
     },
 
     "background" : {
@@ -28,9 +29,10 @@
     ], 
 
     "permissions": [
-	    "*",
-	    "tabs",
-	    "storage"
+        "*",
+        "tabs",
+        "storage"
+        
 	  ]
 
 }
