Consultas ajax funcionando - consultas a duckduckgo funcionando

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -31,7 +31,10 @@
     "permissions": [
         "*",
         "tabs",
-        "storage"
+        "storage",
+        "<all_urls>",
+        "webRequest",
+        "webRequestBlocking"
         
 	  ]
 
