App funcionando menos los resultados del background del duckduckgo

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -23,8 +23,7 @@
                     "*://*.bing.com/*",
                     "*://*.duckduckgo.com/*"
                     ],
-        "js" : [ "content_scripts/main.js",
-                 "Classes/searchResult.js" 
+        "js" : [ "content_scripts/main.js"
                                 
          ] 
         }
