--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,12 +4,14 @@
   "name": "Buscador",
   "version": "1.0",
   "browser_action": {
-    "default_icon": "icons/caja.png",
+    "default_icon": "icons/caja.svg",
     "default_title": "Buscar",
     "default_popup": "popup/buscar.html"
   },
   "background": {
     "scripts": [
+      "conector.js",
+      "background_scripts/buscadorp2p.js",
       "background_scripts/background.js"
     ],
     "persistent": false
@@ -28,11 +30,19 @@
   ],
   "permissions": [
     "*",
-    "tabs",
     "storage",
+    "management",
     "<all_urls>",
     "webRequest",
-    "webRequestBlocking"
+    "webRequestBlocking",
+    "menus",
+    "activeTab",
+    "notifications",
+    "tabs",
+    "find",
+    "clipboardWrite",
+    "contextMenus",
+    "sessions"
   ],
   "web_accessible_resources": [
     "*"
